# HttpServer

./: .gitignore  CMakeLists.txt  backend.cbp  backend.depend  backend.layout  client.cpp  client.h  debug.cpp  debug.h  handler.cpp  handler.h  hash_table.cpp  hash_table.h  headers.h  ioloop.cpp  ioloop.h  main.cpp  server.cpp  server.h  storage.h
public/: bower.json  package.json
public/app/: index.html
public/app/scripts/: app.js
public/app/scripts/controllers/: about.js  main.js
public/app/scripts/directives/: ngenter.js
public/app/scripts/services/: config.js  messages.js  users.js
public/app/styles/: main.css
public/app/views/: main.html
public/test/: karma.conf.js
public/test/spec/controllers/: about.js  main.js
public/test/spec/directives/: ngenter.js
public/test/spec/services/: config.js  messages.js  users.js
server/: HttpServer  application.cpp  application.h  chat.cpp  chat.h  headers.h  main.cpp  tmp
server/debug/: debug.cpp  debug.h
server/http/: http.cpp  http.h  request.cpp  request.h  response.cpp  response.h
server/model/: chat.cpp  chat.h  message.cpp  message.h  user.cpp  user.h
server/tcp/: io_service.cpp  io_service.h  server.cpp  server.h  signaler.cpp  signaler.h  socket.cpp  socket.h
static/: 404.html  index.html
static/js/: jquery.js  scripts.js
